compiler/testData/diagnostics/tests/extensions/contextReceivers/typeParameterized.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

class A
class B<X>(val x: X)

context(T)
fun <T> T.f(t: B<T>) {}

fun Int.main(a: A, b: B<String>) {
    a.<!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>f<!>(b)
}